link changed for opening of users mail client

--- a/src/app/shared/main-navbar/main-navbar.component.html
+++ b/src/app/shared/main-navbar/main-navbar.component.html
@@ -27,7 +27,7 @@
 			}
 		</a>
 
-		<a href="#contact"><img id="envelopeIcon"  src="./assets/social_icons/mail.svg" alt="envelope icon"></a>
+		<a href="mailto:lambeinovab@seznam.cz"><img id="envelopeIcon"  src="./assets/social_icons/mail.svg" alt="envelope icon"></a>
 
 	</div>
 	<a href="#portfolioStart"><img class="personal_logo" src="./assets/logo/logo_white_nobg.png" alt="logo in white"></a>	
