menu.service implementiert in above-the-folder component for closing menu all over the page

--- a/src/app/shared/main-navbar/main-navbar.component.html
+++ b/src/app/shared/main-navbar/main-navbar.component.html
@@ -2,7 +2,7 @@
 	<div class="icons">
 		<a href="https://github.com/BaraDroid" target="_blank"><img id="gitHubIcon" src="./assets/social_icons/github.svg" alt="github icon"></a>
 		
-		<!-- linkedin icon habe to stay in svg form, otherwise "jump" the image -->
+		<!-- linkedin icon have to stay in svg form, otherwise "jump" the image -->
 		 <!-- #region linkedin icon in svg form -->
 		<a (mouseover)="linkedinIconHover = true"
 			(mouseleave)="linkedinIconHover = false"
@@ -42,9 +42,9 @@
             <span>Menu</span>
 			<img (click)="closeMenuTab()" id="menuClose" src="./assets/menu_icons/close.svg" alt="x for closing menu">
         </div>
-		
+
         <div class="links_list">
-            <a (mouseenter)="showWheelAbout = true" (mouseleave)="showWheelAbout = false" href="#about" (click)="closeMenuTab()">@if(showWheelAbout){<img src="./assets/animation_wheels/orange_sun.svg" alt="orange_wheel">}About me</a>
+            <a (mouseenter)="showWheelAbout = true" (mouseleave)="showWheelAbout = false" href="#about" (click)="closeMenuTab()"><img  *ngIf="showWheelAbout" src="./assets/animation_wheels/orange_sun.svg" alt="orange_wheel">About me</a>
             <a (mouseenter)="showWheelSkills = true" (mouseleave)="showWheelSkills = false" href="#competences" (click)="closeMenuTab()">@if(showWheelSkills){<img src="./assets/animation_wheels/orange_sun.svg" alt="orange_wheel">}Skills</a>
             <a (mouseenter)="showWheelPortfolio = true" (mouseleave)="showWheelPortfolio = false" href="#my_work" (click)="closeMenuTab()">@if(showWheelPortfolio){<img src="./assets/animation_wheels/orange_sun.svg" alt="orange_wheel">}Portfolio</a>
             <a (mouseenter)="showWheelRef = true" (mouseleave)="showWheelRef = false" href="#references" (click)="closeMenuTab()">@if(showWheelRef){<img src="./assets/animation_wheels/orange_sun.svg" alt="orange_wheel">}References</a>
