--- a/src/app/main-content/above-the-folder/above-the-folder.component.html
+++ b/src/app/main-content/above-the-folder/above-the-folder.component.html
@@ -1,4 +1,4 @@
-<section>
+<section (click)="closeTheMenu()" >
     <app-main-navbar></app-main-navbar>
     <div class="content">
         <div class="atf_left">
