--- a/src/app/shared/main-navbar/main-navbar.component.html
+++ b/src/app/shared/main-navbar/main-navbar.component.html
@@ -33,7 +33,7 @@
 	<a href="#portfolioStart"><img class="personal_logo" src="./assets/logo/logo_white_nobg.png" alt="logo in white"></a>	
 	<div class="menu">
 			<img id="enIcon" src="./assets/languages/default_en.svg" *ngIf="germanText" (click)="changeToEnglish()" alt="EN icon">
-			<img id="deIcon" src="./assets/languages/default_de.svg" *ngIf="englishText" (click)="changeToGerman()" alt="EN icon">
+			<img id="deIcon" src="./assets/languages/default_de.svg" *ngIf="englishText" (click)="changeToGerman()" alt="DE icon">
 			<img id="burgerMenu" (click)="openMenuTab($event); $event.stopPropagation()" src="./assets/menu_icons/menu_default.svg" alt="burger menu icon">
 	</div>
 
