menu service succesfully added all over the components

--- a/src/app/main-content/about-me/about-me.component.html
+++ b/src/app/main-content/about-me/about-me.component.html
@@ -1,5 +1,4 @@
-<section id="about">
-    <!-- TODO: -->
+<section id="about" (click)="closeTheMenu()">
     <app-common-navbar [whiteColor]="isWhite" ></app-common-navbar>
 
     <div class="content">
