--- a/src/app/main-content/contact/contact.component.html
+++ b/src/app/main-content/contact/contact.component.html
@@ -1,4 +1,4 @@
-<section id="contact">
+<section id="contact" (click)="closeTheMenu()" >
     <app-common-navbar [whiteColor] = "isWhite"></app-common-navbar>
 
     <div class="content fontQuicksand">
