--- a/src/app/main-content/reviews/reviews.component.html
+++ b/src/app/main-content/reviews/reviews.component.html
@@ -1,4 +1,4 @@
-<section id="references">
+<section id="references" (click)="closeTheMenu()" >
     <app-common-navbar [whiteColor] = "isWhite"></app-common-navbar>
 
     <div class="content fontQuicksand">
