--- a/src/app/main-content/about-me/about-me.component.html
+++ b/src/app/main-content/about-me/about-me.component.html
@@ -1,4 +1,4 @@
-<section id="about" (click)="closeTheMenu()">
+<section (click)="closeTheMenu()">
     <app-common-navbar [whiteColor]="isWhite" ></app-common-navbar>
 
     <div class="content">
