--- a/src/app/main-content/work/work.component.html
+++ b/src/app/main-content/work/work.component.html
@@ -1,4 +1,4 @@
-<section id="my_work" (click)="closeTheMenu()" >
+<section (click)="closeTheMenu()" >
     <app-common-navbar></app-common-navbar>
 
     <div class="content">
