--- a/src/app/shared/common-navbar/common-navbar.component.html
+++ b/src/app/shared/common-navbar/common-navbar.component.html
@@ -1,9 +1,9 @@
 <div class="navbar" (click)="closeMenuTab()">
     @if(whiteColor){
-        <a href="#portfolioStart"><img class="personal_logo" src="./assets/logo/logo_white_nobg.png" alt="logo in black"></a>	
+        <a href="#portfolio"><img class="personal_logo" src="./assets/logo/logo_white_nobg.png" alt="logo in black"></a>	
     }
     @else {
-        <a href="#portfolioStart"><img class="personal_logo" src="./assets/logo/logo_black_nobg.png" alt="logo in white"></a>
+        <a href="#portfolio"><img class="personal_logo" src="./assets/logo/logo_black_nobg.png" alt="logo in white"></a>
     }
     	
     <div class="menu">
