--- a/src/app/main-content/work/work.component.scss
+++ b/src/app/main-content/work/work.component.scss
@@ -10,6 +10,17 @@ section {
 }
 app-common-navbar {width: 100%;}
 
+app-navdots {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    >a{
+        >img{height: 8px; width: 8px;}
+    }
+  }
+
 .content {
     width: 100%;
     max-width: 1440px;
