--- a/src/app/main-content/competences/competences.component.html
+++ b/src/app/main-content/competences/competences.component.html
@@ -24,7 +24,7 @@
         </div>
     </div>
         <div class="scroll_bar">
-            <img src="./assets/sidebar/Property 1=Skills.svg" alt="">
+            <app-navdots></app-navdots>
         </div>
     </div>
 
