--- a/src/app/main-content/reviews/reviews.component.html
+++ b/src/app/main-content/reviews/reviews.component.html
@@ -21,7 +21,7 @@
             </div>
         </div>
         <div class="scroll_bar">
-            <img src="./assets/sidebar/Property 1=References.svg" alt="">
+            <app-navdots></app-navdots>
         </div>
     </div>
 </section>
