--- a/src/app/main-content/reviews/reviews.component.scss
+++ b/src/app/main-content/reviews/reviews.component.scss
@@ -52,6 +52,17 @@ section {
     align-self: flex-end;
 }
 
+app-navdots {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    >a{
+        >img{height: 8px; width: 8px;}
+    }
+  }
+
 @media(max-width: 1108px) {
     .content h2 {font-size: 60px; margin-top: 36px;}
 }
