--- a/src/app/main-content/work/work.component.html
+++ b/src/app/main-content/work/work.component.html
@@ -28,7 +28,7 @@
             </div>
         </div>
         <div class="scroll_bar">
-            <img src="./assets/sidebar/Property 1=My_work.svg" alt="">
+            <app-navdots></app-navdots>
         </div>
     </div>
 
