--- a/src/app/main-content/reviews/reviews.component.html
+++ b/src/app/main-content/reviews/reviews.component.html
@@ -21,7 +21,7 @@
             </div>
         </div>
         <div class="scroll_bar">
-            <app-navdots></app-navdots>
+            <app-navdots [whiteColor]="isWhite" ></app-navdots>
         </div>
     </div>
 </section>
