--- a/src/app/main-content/about-me/about-me.component.html
+++ b/src/app/main-content/about-me/about-me.component.html
@@ -6,7 +6,7 @@
         <div class="right_side">
             <h2 class="fontEckzar">{{ 'about_me.h2' | translate }}</h2>
             <div class="scroll_bar">
-                <app-navdots></app-navdots>
+                <app-navdots [whiteColor]="isWhite" ></app-navdots>
             </div>
         </div>
     </div>
