--- a/src/app/main-content/work/work.component.html
+++ b/src/app/main-content/work/work.component.html
@@ -28,7 +28,7 @@
             </div>
         </div>
         <div class="scroll_bar">
-            <app-navdots></app-navdots>
+            <app-navdots [whiteColor]="isWhite" ></app-navdots>
         </div>
     </div>
 
