--- a/src/app/main-content/above-the-folder/above-the-folder.component.html
+++ b/src/app/main-content/above-the-folder/above-the-folder.component.html
@@ -16,7 +16,7 @@
             <img class="my_foto" src="./assets/imgs/foto_no_bg.png" alt="">
         </div>
         <div class="scroll_bar">
-            <app-navdots [whiteColor]="isWhite" ></app-navdots>
+            <app-navdots [whiteColor]="isWhite" [sectionIndex]="indexOfThisSection"></app-navdots>
         </div>
     </div>
 </section>
