--- a/src/app/main-content/contact/contact.component.html
+++ b/src/app/main-content/contact/contact.component.html
@@ -17,7 +17,7 @@
         </div>
     </div>
         <div class="scroll_bar">
-            <app-navdots [whiteColor]="isWhite" ></app-navdots>
+            <app-navdots [whiteColor]="isWhite" [sectionIndex]="indexOfThisSection"></app-navdots>
         </div>
     </div>
     <svg class="blue_sun" width="121" height="120" viewBox="0 0 121 120" fill="#679aac" xmlns="http://www.w3.org/2000/svg">
