--- a/src/app/shared/main-navbar/main-navbar.component.scss
+++ b/src/app/shared/main-navbar/main-navbar.component.scss
@@ -35,10 +35,9 @@
 }
 
 .menu_tab {
-    position: absolute;
+    position: fixed;
     top: 12px;
-    right: -5000px;
-    top: -500px;
+    right: -250px;
     z-index: 15;
     height: 222px;
     width: 208px;
@@ -49,7 +48,6 @@
     display: flex;
     flex-direction: column;
     gap: 16px;
-    display: none;
 }
 
 .menu_tab .links_list {
@@ -60,10 +58,10 @@
 .menu_open {
     display: flex;
     flex-direction: column;
-    transition: 0.4s;
+    transition: right 0.4s ease-out;  //hier angepasst
     position: absolute;
     top: 12px;
-    right: 50px;
+    right: 55px;
     z-index: 15;
     box-sizing: border-box;
 }
