--- a/src/app/shared/main-navbar/main-navbar.component.scss
+++ b/src/app/shared/main-navbar/main-navbar.component.scss
@@ -58,7 +58,7 @@
 .menu_open {
     display: flex;
     flex-direction: column;
-    transition: right 0.4s ease-out;  //hier angepasst
+    transition: right 0.4s ease-out;
     position: absolute;
     top: 12px;
     right: 55px;
