restructuralizing about me section

--- a/src/app/main-content/above-the-folder/above-the-folder.component.scss
+++ b/src/app/main-content/above-the-folder/above-the-folder.component.scss
@@ -260,6 +260,8 @@ app-navdots {
     .my_foto {height: 77%;}
 }
 
+
+//komentar zkouska github
 //kontrola, dal jsem nedelala, protoze jsem zacla od velky obrazovky
 @media(max-width: 515px) {
     .sun {right: 46px;}
