--- a/src/app/main-content/about-me/about-me.component.scss
+++ b/src/app/main-content/about-me/about-me.component.scss
@@ -30,9 +30,8 @@ section {
 
 .right_side {
     display: flex;
-    width: 100%;
-    justify-content: space-between;
-
+    flex-direction: column;
+    //width: 100%;
 }
 
 h2 {
