--- a/src/app/main-content/above-the-folder/above-the-folder.component.scss
+++ b/src/app/main-content/above-the-folder/above-the-folder.component.scss
@@ -10,6 +10,7 @@ section {
 
 app-main-navbar {
     width: 100%;
+    max-width: 1440px;
 }
 
 app-navdots {
@@ -76,14 +77,14 @@ app-navdots {
 .sun {
     position: absolute;
     top: 104px;
-    right: 77px;
+    right: 8px;
     height: 327px;
     z-index: 5;
 }
 .my_foto {
     position: absolute;
     bottom: 0;
-    left: -50px;
+    left: -10px;
     height: 100%;
     z-index: 10;
 }
@@ -94,12 +95,24 @@ app-navdots {
 
 .rotating {margin-top: 50px;}
 
+//***************MIN WIDTH**********************************************
+@media(min-width: 1286px) {
+    .my_foto {left: 100px;}
+    .sun {right: 60px;}
+}
+
+//**************MAX WIDTH*********************************************
+@media (max-width: 1240px) {
+    .my_foto {left: -30px;}
+    .sun {height: 291px;}
+}
+
 @media (max-width: 1189px){
     .sun {right: -37px;}
 }
 
-@media (max-width: 1155px) {
-    .sun {height: 300px;}
+@media(max-width: 1160px) {
+    .my_foto {left: -43px;}
 }
 
 @media (max-width: 1130px) {
@@ -108,9 +121,17 @@ app-navdots {
     .my_foto {left: -84px;}
 }
 
+@media(max-width: 1100px) {
+    .my_foto {left: -104px;}
+}
+
 @media (max-width: 1086px) {
     .my_foto{left: -140px;}
     .sun {top: 123px;}
+}
+
+@media(max-width: 1060px) {
+    .my_foto {left: -155px;}
 }
 
 @media (max-width: 1018px) {
@@ -184,6 +205,10 @@ app-navdots {
     .sun{top: 179px;}
 }
 
+@media(max-width: 708px) {
+    section {overflow-x: hidden;}
+}
+
 @media(max-width: 705px) {
     .atf_left {margin-top: 36px;}
     .my_foto {height: 90%; left: -166px;}
@@ -235,7 +260,6 @@ app-navdots {
     .atf_left {gap: 8px;}
 }
 
-//FERTIGkontrola
 @media(max-width: 568px) {
     .sun{height: 238px; top: 247px;}
     .my_foto {height: 80%;}
@@ -253,63 +277,69 @@ app-navdots {
     .my_foto {left: -210px;}
 }
 
-
-@media(max-width: 535px) {
-    .sun {top: 258px;
-        height: 191px;}
-    .my_foto {height: 77%;}
+@media(max-width: 522px) {
+    .my_foto {left: -222px;}
 }
 
-
-//komentar zkouska github
-//kontrola, dal jsem nedelala, protoze jsem zacla od velky obrazovky
 @media(max-width: 515px) {
-    .sun {right: 46px;}
-    .my_foto {left: -230px;}
+    .sun {right: 116px;}
+    .my_foto {left: -230px; height: 77%;}
 }
 
-@media(max-width: 507px) {
-    .sun {right: -55px;}
-    .my_foto {left:-266px;}
+@media(max-width: 511px) {
+    .my_foto {left: -246px;}
+    .sun {right: 93px;}
 }
 
-@media(max-width: 485px) {
+@media(max-width: 506px) {
     .my_foto {height: 73%;}
     .rotating {
         margin-top: -21px;
     }
-    .arrow {bottom: 103px;}
+    //.arrow {bottom: 103px;}
+    .sun {top: 275px;}
+}
+
+@media(max-width: 484px) {
+ .sun {height: 222px;}
 }
 
 @media (max-width: 460px) {
-    .my_foto {left: -296px;}
+    .my_foto {left: -278px;}
     .sun {top: 275px;}
     .btn {margin-top: 0;}
+    .atf_left >img {margin-top: 272px; z-index: 20;}
+    .arrow {bottom: 360px;}
+    .rotating {background-color: #679aac; border-radius: 50%;}
 }
 
 @media (max-width: 450px) {
     .my_foto {bottom: -16px;}
 }
 
+@media (max-width: 430px) {
+    .my_foto {left: -300px;}
+}
+
 @media (max-width: 420px) {
     .atf_left {gap: 30px;}
-    .my_foto {left: -346px;}
-    .sun {top: 304px; right: -36px;}
-    .rotating {
-        margin-top: 0;
-        z-index: 20;
-    }
-    .atf_left >img {margin-top: 299px;}
-    .arrow {margin-top: 0; bottom: 402px;}
+    .my_foto {left: -319px;}
+    .sun {top: 304px; right: 132px;}
+    // .rotating {
+    //     margin-top: 0;
+    //     z-index: 20;
+    // }
+    // .atf_left >img {margin-top: 299px;}
+    .arrow {bottom: 382px;}
 }
 
-@media (max-width: 400px) {
-    .sun {right: -11px;}
+@media (max-width: 404px) {
+    .sun {right: 116px;}
 }
 
-@media (max-width: 385px) {
-    .my_foto {height: 72%;}
-    .sun {right: 0; top: 322px;}
+@media (max-width: 392px) {
+    .my_foto {height: 72%; left: -325px;}
+    .sun {right: 101px; top: 322px;}
 }
 
 @media (max-width: 380px) {
@@ -321,8 +351,8 @@ app-navdots {
 }
 
 @media (max-width: 369px) {
-    .my_foto {left: -336px;}
-    .sun {right: 20px;}
+    .my_foto {left: -336px; height: 69%;}
+    .sun {right: 20px; height: 293px;}
     .atf_left .text span {
         font-size: 26px;
     }
@@ -348,44 +378,3 @@ app-navdots {
     .my_foto {height: 67%;}
     .sun {height: 196px; top: 323px;}
 }
-
-// @media (max-width: 555px) {
-//     .btn {margin-top: 0;}
-//     .atf_left {gap: 20px; height: 100%; width: 100%;}
-//     .atf_left img {height: 99px;}
-// }
-
-// @media (max-width: 500px) {
-//     .atf_left img {
-//         position: absolute;
-//         bottom: 5%;
-//         z-index: 20;
-//         background-color: #679aac;
-//         border-radius: 100px;
-//     }
-//     .my_foto{height: 66%; right: 25px;}
-//     .sun {top: 348px; height: 189px;}
-//     .atf_left .text h1 {font-size: 60px; line-height: 60px;}
-//     .atf_left .text span {font-size: 22px;}
-// }
-
-// @media (max-width: 455px) {
-//     .atf_left .text h1 {font-size: 45px; line-height: 55px;}
-//     .atf_left .text span {font-size: 18px; line-height: 25px;}
-//     .content {height: calc(100vh - 72px);}
-//     .my_foto {right: 0;}
-//     .sun {top: 351px; right: 17px; height: 173px;}
-// }
-
-// @media (max-width: 450px) {
-//     .content {padding-left: 16px; padding-right: 16px;}
-//     .scroll_bar {display: none;}
-// }
-
-// @media (max-width: 360px) {
-//     .my_foto {height: 60%;}
-// }
-
-// @media (max-width: 333px) {
-//     .my_foto{height: 58%}
-// }
