--- a/src/app/main-content/about-me/about-me.component.html
+++ b/src/app/main-content/about-me/about-me.component.html
@@ -13,9 +13,10 @@
 
     <div class="text_over">
         <div class="description fontQuicksand">
-            <p>{{ 'about_me.text1' | translate }}</p>
+            <p class="normal_view_text">{{ 'about_me.text1' | translate }}</p>
+            <p class="mobile_view_text">{{ about_me.mobile_view_text | translate }}</p>
             <br>
-            <p>{{ 'about_me.text2' | translate }}</p>
+            <p class="vanishable">{{ 'about_me.text2' | translate }}</p>
             <div class="interactive">
                <a href="#contact"><button class="btn fontQuicksand">Let´s Talk</button></a>
                 <img class="jumping_icon" src="./assets/emojis/secret.svg" alt="">
