--- a/src/app/main-content/about-me/about-me.component.html
+++ b/src/app/main-content/about-me/about-me.component.html
@@ -14,7 +14,7 @@
     <div class="text_over">
         <div class="description fontQuicksand">
             <p class="normal_view_text">{{ 'about_me.text1' | translate }}</p>
-            <p class="mobile_view_text">{{ about_me.mobile_view_text | translate }}</p>
+            <p class="mobile_view_text">{{ 'about_me.mobile_view_text' | translate }}</p>
             <br>
             <p class="vanishable">{{ 'about_me.text2' | translate }}</p>
             <div class="interactive">
@@ -26,7 +26,11 @@
     </div>
     
     <div class="info_slide_up">
-        <h5>More about me</h5>
+        <div>
+            <h5>More about me</h5>
+            <img src=".\assets\menu_icons\close_white.svg" alt="">
+        </div>
+        
             @for (text of 'about_me.slide_up_info' | translate ; track $index) {
                 <div>
                     <img src="./assets/menu_icons/check_circle.svg" alt="check circle">
