hover effekt at jumping icon for showing the info slider

--- a/src/app/main-content/about-me/about-me.component.html
+++ b/src/app/main-content/about-me/about-me.component.html
@@ -26,9 +26,9 @@
     </div>
     
     <div class="info_slide_up">
-        <div>
+        <div class="menu_title">
             <h5>More about me</h5>
-            <img src=".\assets\menu_icons\close_white.svg" alt="">
+            <img src="./assets/menu_icons/close_white.svg" alt="x icon">
         </div>
         
             @for (text of 'about_me.slide_up_info' | translate ; track $index) {
