--- a/src/app/main-content/about-me/about-me.component.scss
+++ b/src/app/main-content/about-me/about-me.component.scss
@@ -72,7 +72,7 @@ h2 {
     border-radius: 4px;
     border: 1px solid black;
     padding: 32px;
-    display: flex;
+    display: none;
     z-index: 100; //jinak to zmizi pod nasledujici sekci
     flex-direction: column;
     justify-content: center;
@@ -80,16 +80,29 @@ h2 {
     background-color: #679aac;
     color: #f8f7e5;
     font-family: 'Quicksand';
-    >h5 {
-        font-size: 24px;
-        font-weight: 700;
-    }
     >div {
         display: flex;
         align-items: center;
         gap: 8px;
         font-size: 16px;
         font-weight: 400px;
+    }
+}
+
+h5 {
+    font-size: 24px;
+    font-weight: 700;
+}
+
+.menu_title {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.jumping_icon:hover {
+    ~.info_slide_up {
+        display: flex;
     }
 }
 
@@ -141,7 +154,7 @@ app-navdots {
         margin-left: 10%;
     }
     .info_slide_up {padding: 16px; gap: 8px;}
-    .info_slide_up >h5 {font-size: 20px;}
+    h5 {font-size: 20px;}
 }
 
 @media (max-width: 900px) {
