--- a/src/app/main-content/about-me/about-me.component.html
+++ b/src/app/main-content/about-me/about-me.component.html
@@ -32,7 +32,7 @@
     <div class="info_slide_up" [ngClass]="{'show_info_slider': infoSliderVisible}">
         <div class="menu_title">
             <h5>More about me</h5>
-            <img src="./assets/menu_icons/close_white.svg" alt="x icon">
+            <img class="x_icon" src="./assets/menu_icons/close_white.svg" alt="x icon">
         </div>
         
             @for (text of 'about_me.slide_up_info' | translate ; track $index) {
