--- a/src/app/main-content/about-me/about-me.component.scss
+++ b/src/app/main-content/about-me/about-me.component.scss
@@ -76,8 +76,8 @@ h2 {
     border-radius: 4px;
     border: 1px solid black;
     padding: 32px;
-    display: none;
-    transform: translateY(-100%);
+    //display: none;
+    transform: translateY(100%);
     flex-direction: column;
     justify-content: center;
     gap: 16px;
@@ -85,7 +85,7 @@ h2 {
     color: #f8f7e5;
     font-family: 'Quicksand';
     align-self: flex-end;
-    margin-right: 16%;
+    margin-right: 20%;
     transition: transform 0.4s ease-out;
     >div {
         display: flex;
@@ -96,9 +96,13 @@ h2 {
     }
 }
 
+.x_icon {
+    display: none;
+}
+
 .show_info_slider {
     display: flex;
-    background-color: red;
+    //background-color: red;
     transform: translateY(-77%);
     z-index: 3;
 }
@@ -168,6 +172,7 @@ app-navdots {
 
 @media (max-width: 900px) {
     app-navdots {display: none;}
+    .x_icon {display: block;}
 }
 
 @media (max-width: 889px) {
