new informations and styles added to pokedex project information

--- a/src/app/main-content/work/work.component.html
+++ b/src/app/main-content/work/work.component.html
@@ -10,11 +10,19 @@
             <div class="slider">
                 <div class="screenshot">
                     <img class="project_image" src="././assets/screenshots/pokedex.png" alt="">
-                    <img class="wheel" src="././assets/animation_wheels/orange_sun.svg" alt="">
+                    <img class="wheel rotating" src="././assets/animation_wheels/orange_sun.svg" alt="">
                 </div>
                 <div class="description fontQuicksand">
-                    <div class="text">
-                        {{ 'work.description' | translate }}
+                    <div class="my_contribution">
+                        {{ 'work.Pokedex.contribution' | translate }}
+                    </div>
+                    <div class="about_project">
+                        <div class="project_name">
+                            <h5>Pokedex</h5>
+                            <img class="project_icon jumping_icon" src="./assets/emojis/statistic.svg" alt="icon for showing more info">
+                        </div>
+                        <span class="technologies">REST API | JavaScript | CSS | HTML</span>
+                        {{ 'work.Pokedex.description' | translate }}
                         <div class="interactiv_btns">
                             <button class="btn">Git Hub</button>
                             <button class="btn">Live Test</button>
