--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,6 +10,12 @@
   src: url('./../public/assets/fonts/Quicksand/Quicksand-VariableFont_wght.ttf');
 }
 
+/* karla-regular - latin */
+@font-face {
+  font-family: 'Karla';
+  src: url(./../public/assets/fonts/Karla/Karla-VariableFont_wght.ttf);
+}
+
   * {
     margin: 0;
     position: relative;
